force-app/main/default/objects/Tax_Details__c/Tax_Details__c.object-meta.xml
<CustomObject>
    <label>Tax</label>
    <nameField>
        <displayFormat>TX{YYYY}{MM}{00000000}</displayFormat>
        <label>Tax Details No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>