force-app/main/default/objects/Tax_Details__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPE-MFM-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-DAD-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-PEN-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-CEB-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-MFM(one-way)</fullName>
            </value>
            <value>
                <fullName>MFM-TPE(one-way)</fullName>
            </value>
            <value>
                <fullName>TPE-DAD(one-way)</fullName>
            </value>
            <value>
                <fullName>DAD-TPE(one-way)</fullName>
            </value>
            <value>
                <fullName>TPE-PEN(one-way)</fullName>
            </value>
            <value>
                <fullName>PEN-TPE(one-way)</fullName>
            </value>
            <value>
                <fullName>TPE-CEB(one-way)</fullName>
            </value>
            <value>
                <fullName>CEB-TPE(one-way)</fullName>
            </value>
            <value>
                <fullName>TPE-BKK-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-OKA-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-FUK-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-KIX-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-SDJ-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-CTS-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-PUS-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-CNX-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-KLO-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-CJU-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-KUL-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-HKD-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-MNL-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-NRT-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-LAX-TPE</fullName>
            </value>
            <value>
                <fullName>TPE-HAN-TPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>