force-app/main/default/objects/Tax_Details__c/fields/Seat_Allocation_and_Ticketing_ID__c.field-meta.xml
<CustomField>
    <fullName>Seat_Allocation_and_Ticketing_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seat Allocation and Ticketing ID</label>
    <referenceTo>Seat_Allocation_and_Ticketing__c</referenceTo>
    <relationshipLabel>Tax</relationshipLabel>
    <relationshipName>Tax</relationshipName>
    <type>Lookup</type>
</CustomField>