force-app/main/default/objects/Tax_Details__c/fields/Tax_Amount_Infant__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Infant__c</fullName>
    <label>Tax Amount(Infant)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>