force-app/main/default/objects/Tax_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Route__c</columns>
    <columns>Tax_Date__c</columns>
    <columns>Tax_Amount_Adult__c</columns>
    <columns>Tax_Amount_Child__c</columns>
    <columns>Tax_Amount_Infant__c</columns>
    <columns>Seat_Allocation_and_Ticketing_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>